k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: dimas-java
spec:
  ports:
  - port: 80
    targetPort: 9090
    protocol: TCP
    name: http
  selector:
    app: dimas-java
